...

class Test extends StatelessWidget {
  @override
  Widget build(BuildContext context) {
    return Container(
      child: RaisedButton(
        key: ValueKey("tap_to_profile"),
        onPressed: () => Navigator.of(context)
            .push(MaterialPageRoute(builder: (_) => ProfileScreen())),
      ),
    );
  }
}
...
